--- a/package.json
+++ b/package.json
@@ -22,18 +22,22 @@
     "@angular/platform-browser": "12.1.2",
     "@angular/platform-browser-dynamic": "12.1.2",
     "@angular/router": "12.1.2",
+    "@fortawesome/fontawesome-free": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "@ngrx/store": "^13.0.2",
     "@types/chart.js": "^2.9.35",
+    "angular-bootstrap-md": "^12.2.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "4.5.2",
-    "chart.js": "^2.9.3",
+    "chart.js": "^2.5.0",
     "clipboard": "2.0.6",
     "core-js": "3.15.2",
+    "hammerjs": "^2.0.8",
     "moment": "^2.29.1",
     "ngx-clipboard": "14.0.1",
     "ngx-toastr": "14.0.0",
     "nouislider": "14.6.2",
-    "rxjs": "7.2.0",
+    "rxjs": "^7.5.5",
     "socket.io-client": "^4.4.1",
     "zone.js": "0.11.4"
   },
