--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "core-js": "3.15.2",
     "hammerjs": "^2.0.8",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "ngx-clipboard": "14.0.1",
     "ngx-toastr": "14.0.0",
     "nouislider": "14.6.2",
