--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "ngx-clipboard": "14.0.1",
+    "ngx-spinner": "^13.1.1",
     "ngx-toastr": "14.0.0",
     "nouislider": "14.6.2",
     "rxjs": "^7.5.5",
