--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "12.1.2",
     "@angular/router": "12.1.2",
     "@fortawesome/fontawesome-free": "^6.1.0",
+    "@microsoft/signalr": "^6.0.4",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "@ngrx/store": "^13.0.2",
     "@types/chart.js": "^2.9.35",
