--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "ngx-clipboard": "14.0.1",
+    "ngx-order-pipe": "^2.2.0",
     "ngx-spinner": "^13.1.1",
     "ngx-toastr": "14.0.0",
     "nouislider": "14.6.2",
@@ -45,7 +46,7 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.1.2",
+    "@angular-devkit/build-angular": "^12.1.2",
     "@angular/cli": "12.1.2",
     "@angular/compiler-cli": "12.1.2",
     "@angular/language-service": "12.1.2",
