feat: nova identidade login e inicio cadastro

--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,9 @@
               "node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
               "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
               "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
-              "node_modules/animate.css/animate.css"
+              "node_modules/animate.css/animate.css",
+              "src/assets/scss/custom-identidade/variables.scss",
+              "src/assets/scss/custom-identidade/custom-brand.scss"
             ],
             "scripts": [
               "node_modules/chart.js/dist/Chart.min.js",
