--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@angular/platform-browser-dynamic": "12.1.2",
     "@angular/router": "12.1.2",
     "@fortawesome/fontawesome-free": "^6.1.0",
+    "@fullcalendar/angular": "^6.0.3",
+    "@fullcalendar/core": "^6.0.3",
+    "@fullcalendar/daygrid": "^6.0.3",
     "@microsoft/signalr": "^6.0.4",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "@ngrx/store": "^13.0.2",
